--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@tanstack/react-query": "^5.66.11",
     "cheerio": "^1.0.0",
     "next": "15.1.6",
-    "prettier": "^3.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.15.1",
@@ -21,7 +20,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.0.12",
     "@tanstack/eslint-plugin-query": "^5.66.1",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -29,7 +28,9 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "tailwindcss": "^4.0.12",
     "typescript": "^5"
   }
 }
