--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gray-matter": "^4.0.3",
     "next": "15.1.6",
     "next-mdx-remote": "^5.0.0",
+    "next-themes": "^0.4.6",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
