--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.17",
+    "turbo": "^2.4.4",
     "typescript": "^5"
   }
 }
