--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fec/remark-a11y-emoji": "^4.0.2",
+    "@next/third-parties": "^15.2.2",
     "@tanstack/react-query": "^5.66.11",
     "cheerio": "^1.0.0",
     "clsx": "^2.1.1",
